test/tests/stages/15_arrays_and_pointer_arithmetic/valid/pointer_arithmetic/add_dereference_and_assign.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 2
                    Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDereference: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDereference: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: arr
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 4
                    None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 4
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
